src/objects/Value_Back_Contract__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Value_Back</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreed_Spend__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Agreed Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Ad Hoc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value_Back__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Value Back</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Value Back Contract</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Agreed_Spend__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Type__c</columns>
        <columns>Value_Back__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Value Back Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Value Back Contract</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>